--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
 	"version": "0.0.1",
 	"description": "Awesome project developed with TypeORM.",
 	"devDependencies": {
-		"ts-node": "3.3.0",
 		"@types/node": "^8.0.29",
+		"nodemon": "^2.0.7",
+		"ts-node": "3.3.0",
 		"typescript": "3.3.3333"
 	},
 	"dependencies": {
@@ -16,6 +17,7 @@
 	},
 	"scripts": {
 		"start": "ts-node src/index.ts",
+		"start:dev": "nodemon",
 		"typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
 	}
 }
