--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.0.1",
 	"description": "Awesome project developed with TypeORM.",
 	"devDependencies": {
+		"@types/cors": "^2.8.10",
 		"@types/node": "^8.0.29",
 		"nodemon": "^2.0.7",
 		"ts-node": "3.3.0",
@@ -10,6 +11,7 @@
 	},
 	"dependencies": {
 		"body-parser": "^1.18.1",
+		"cookie-parser": "^1.4.5",
 		"cookie-session": "^1.4.0",
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
