--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
 	"description": "Awesome project developed with TypeORM.",
 	"devDependencies": {
 		"@types/cors": "^2.8.10",
+		"@types/express": "^4.17.11",
 		"@types/node": "^8.0.29",
+		"@types/passport": "^1.0.6",
 		"nodemon": "^2.0.7",
 		"ts-node": "3.3.0",
 		"typescript": "3.3.3333"
