--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"@types/express": "^4.17.11",
 		"@types/node": "^8.0.29",
 		"@types/passport": "^1.0.6",
+		"@types/socket.io": "^2.1.13",
 		"nodemon": "^2.0.7",
 		"ts-node": "3.3.0",
 		"typescript": "3.3.3333"
@@ -25,6 +26,7 @@
 		"passport-google-oauth20": "^2.0.0",
 		"pg": "^8.4.0",
 		"reflect-metadata": "^0.1.10",
+		"socket.io": "^3.1.1",
 		"typeorm": "0.2.31"
 	},
 	"scripts": {
